# Asticle

./: README.md  asticle.db  main.py  pyproject.toml  requirements.txt  test_repository.py
app/: auth.py  database.py  main.py
app/config/: config.py
app/handlers/: article.py  favourites.py  health.py  users.py
app/models/: article.py  favourite.py  user.py
app/repositories/: article_repository.py  favourite_repository.py  user_repository.py
app/schemas/: article.py  favourite.py  user.py
app/services/: article_service.py  auth_service.py  favourite_service.py  user_service.py
frontend/: app.py  config.py
frontend/.streamlit/: config.toml
frontend/api/: client.py
frontend/auth/: state.py
frontend/components/: articles.py
frontend/pages/: article.py  articles.py  favourites.py  login.py  profile.py  registration.py
frontend/pages/admin/: admin.py  create_article.py  edit_articles.py  update_article.py  users.py
frontend/patterns/: article.py  cookie.py  header.py  user.py
frontend/services/: articles.py
frontend/ui/: layout.py  styles.py
frontend/views/: admin.py  article.py  auth.py  catalog.py  favourites.py  shared.py
test/: app.py  main.py
